# homework_04

./: Dockerfile  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
homework_04/: Dockerfile  __init__.py  config.py  docker-compose.yaml  main.py  mixins.py  models.py  post.py  user.py
mod/: __init__.py  jsonplaceholder_requests.py  models.py  post.py  user.py
