[tool.poetry]
name = "homework_04"
version = "0.1.0"
description = ""
authors = ["Vladislav Glagolev <khfdh@yandex.ru>"]
license = "MIT"
readme = "README.md"
packages = [{include = "homework_04_data_base"}]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "1.4.44"
pg8000 = "^1.29.3"
black = "^22.10.0"
alembic = "^1.8.1"
aiohttp = "^3.8.3"
asyncpg = "^0.27.0"
anyio = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
